Make hero look better on mobile. Fixes #555

--- a/src/nyc_trees/sass/partials/_home.scss
+++ b/src/nyc_trees/sass/partials/_home.scss
@@ -3,7 +3,7 @@ $hero-box-side-padding: 3rem;
 
 .hero {
   position: relative;
-  height: 45rem;
+  height: 31rem;
 }
 
 .hero-content {
@@ -16,7 +16,12 @@ $hero-box-side-padding: 3rem;
   border-top: 1px solid $gray-lighter;
   padding: 1rem 0;
   display: block;
+  font-size: $font-size-h5 !important;
   margin: $hero-box-top-padding -1*$hero-box-side-padding -1*$hero-box-top-padding;
+}
+
+.hero-heading {
+  font-size: $font-size-h3;
 }
 
 .hero-box {
@@ -94,7 +99,7 @@ $hero-box-side-padding: 3rem;
 }
 
 .section-home {
-  margin: 3rem $grid-gutter-width/-2;
+  margin: 1rem $grid-gutter-width/-2;
 }
 
 .section-about-logo {
@@ -156,14 +161,34 @@ $hero-box-side-padding: 3rem;
   padding: 1rem;
 }
 
+.home-description {
+  font-size: $font-size-h5;
+}
+
 @media (min-width: $screen-sm) {
+  .section-home {
+    margin: 3rem $grid-gutter-width/-2;
+  }
+  .home-description {
+    font-size: $font-size-h4;
+  }
   .progress-circles {
     margin-left: auto;
     margin-right: auto;
   }
+  .hero {
+    height: 45rem;
+  }
   .hero-content {
     margin-left: $grid-gutter-width/-2;
     margin-right: $grid-gutter-width/-2;
+    margin-top: 4rem;
+  }
+  .hero-heading {
+    font-size: $font-size-h1;
+  }
+  .hero-link {
+    font-size: $font-size-h4;
   }
   .progress-circle-number {
     font-size: $font-size-h2;
